tests/positive/types.sp
a:Int;
b:Double = 0;
c:Bool = 0.4;
d:Void;