tests/negative/bad-array.sp
goodArray:[Int];
goodArray:[Double];
goodArray:[Float];
goodArray:[Void];
goodArray:[Bool];
badArray:[badType];